--- a/agentstvo/templates/base.html
+++ b/agentstvo/templates/base.html
@@ -36,7 +36,7 @@
         </div>
     </div>
 </div>
-    {% block content %}
+
 
     {% placeholder 'slider' %}
 
@@ -47,10 +47,15 @@
     </div>
 
     {% placeholder 'content' %}
+    {% block content %}
+
+    {% endblock %}
+
+    {% placeholder 'bottom' %}
 
 </div>
 </div>
-    {% endblock %}
+
 
 <div class="footer">
     <div class="container">
