--- a/agentstvo/templates/base.html
+++ b/agentstvo/templates/base.html
@@ -39,7 +39,7 @@
 
 
     {% placeholder 'slider' %}
-
+{% block main %}
 <div class="content" style="background: none; padding-top: 0;">
 <div class="container">
     <div class="breadcrumb">
@@ -55,6 +55,7 @@
 
 </div>
 </div>
+{% endblock %}
 
 
 <div class="footer">
