--- a/agentstvo/templates/services/cakes.html
+++ b/agentstvo/templates/services/cakes.html
@@ -4,10 +4,10 @@
 
 <div class="catalog-cake">
     {% for cake in list %}
-        <div class="cake {% cycle 'fll' 'flr' %}">
+        <div class="cake {% cycle 'fll' 'flr' %}" id="cake-{{ cake.id }}">
             <div class="thumber">
                 {% thumbnail cake.image '1000' as big %}
-                <a href="{{ big.url }}">
+                <a href="{{ big.url }}" rel="gal" data-cake='{{ cake.id }}' class="lbox-comment">
                     {% thumbnail cake.image '220x220' crop='center' as img %}
                         <img src="{{ img.url }}" width="220" height="220" alt="{{ cake.name }}">
                     {% endthumbnail %}
