--- a/agentstvo/templates/services/decorates.html
+++ b/agentstvo/templates/services/decorates.html
@@ -7,7 +7,7 @@
         <div class="thumber fll">
                 {% for image in decorate.images.all %}
                 {% thumbnail image.image '1000' as big %}
-                    <a id="color-{{ image.id }}" {% if not forloop.first %}style="display: none"{% endif %} href="{{ big.url }}" rel="gal-{{ decorate.id }}" class="lbox">
+                    <a id="color-{{ image.id }}" {% if not forloop.first %}style="display: none"{% endif %} href="{{ big.url }}" rel="gal-{{ decorate.id }}" class="lbox2">
                         {% thumbnail image.image '360x360' crop='center' as img %}
                             <img src="{{ img.url }}" width="360" height="360" alt="{{ image.name }}">
                         {% endthumbnail %}
@@ -37,7 +37,7 @@
                 <div class="thumbs">
                 {% for image in decorate.get_thumbs %}
                     {% thumbnail image.image '1000' as big %}
-                        <a href="{{ big.url }}" rel="gal-{{ decorate.id }}" class="lbox">
+                        <a href="{{ big.url }}" rel="gal-{{ decorate.id }}" class="lbox2">
                             {% thumbnail image.image '90x90' crop='center' as img %}
                                 <img src="{{ img.url }}" width="90" height="90" alt="{{ image.name }}">
                             {% endthumbnail %}
