--- a/agentstvo/static/css/style.css
+++ b/agentstvo/static/css/style.css
@@ -358,18 +358,16 @@ h2 {
     margin-right: 10px;
 }
 
-
-
-.colors li.active a{
+.colors li.active a {
     border: 1px solid #fff;
     box-shadow: none;
 }
 
-.colors{
+.colors {
     margin-bottom: 8px;
 }
 
-.buy{
+.buy {
     background: url("../images/buy-button.png") repeat-x top;
     border-radius: 3px;
     display: block;
@@ -382,9 +380,189 @@ h2 {
     padding-top: 8px;
 }
 
-
-.buy:hover{
+.buy:hover {
     background-position: bottom;
+}
+
+.cake .thumber {
+    width: 270px;
+    height: 270px;
+    overflow: hidden;
+    margin-bottom: 15px;
+
+}
+
+.category-cake .cake {
+    width: 270px;
+    float: left;
+    margin-right: 86px;
+    margin-bottom: 50px;
+}
+
+.category-cake .cake.last {
+    margin-right: 0;
+}
+
+.category-cake .cake p {
+    margin-bottom: 15px;
+    line-height: 16px;
+}
+
+.see-all {
+    background: url("../images/buy-button.png") repeat-x top;
+    color: #000;
+    font-family: 'vetren', serif;
+    font-size: 20px;
+    width: 130px;
+    height: 27px;
+    text-decoration: none;
+    border-radius: 4px;
+    display: block;
+    text-align: center;
+    padding-top: 8px;
+
+}
+
+.cake .name {
+    font-family: 'vetren', serif;
+    font-size: 26px;
+    display: block;
+    text-decoration: none;
+    margin-bottom: 15px;
+}
+
+.cake .name:hover {
+    text-decoration: underline;
+
+}
+
+.see-all:hover {
+    background: url("../images/buy-button.png") repeat-x bottom;
+
+}
+
+.category-mc .thumber {
+    float: left;
+    width: 240px;
+    height: 300px;
+}
+
+.category-mc .info {
+    margin-left: 270px;
+}
+
+.category-mc .top-info .flr {
+    margin-left: 200px;
+}
+
+.category-mc .top-info {
+    margin-bottom: 50px;
+
+}
+
+.category-mc .top-info .phone {
+    font-family: 'vetren', serif;
+    font-size: 33px;
+    margin-bottom: 20px;
+
+}
+
+.category-mc .top-info p{
+    line-height: 16px;
+}
+
+.send-mes {
+    background: url("../images/buy-button.png") repeat-x top;
+    color: #000;
+    font-family: 'vetren', serif;
+    font-size: 28px;
+    width: 150px;
+    height: 37px;
+    text-decoration: none;
+    border-radius: 4px;
+    display: block;
+    text-align: center;
+    padding-top: 8px;
+    float: right;
+
+}
+
+.send-mes:hover{
+    background: url("../images/buy-button.png") repeat-x bottom;
+}
+
+
+.order {
+    background: url("../images/buy-button.png") repeat-x top;
+    color: #000;
+    font-family: 'vetren', serif;
+    font-size: 20px;
+    width: 100px;
+    height: 27px;
+    text-decoration: none;
+    border-radius: 4px;
+    display: block;
+    text-align: center;
+    padding-top: 8px;
+
+
+}
+
+.order:hover{
+    background: url("../images/buy-button.png") repeat-x bottom;
+}
+
+
+.mc{
+    margin-bottom: 70px;
+}
+
+.mc .name{
+    font-family: 'vetren', serif;
+    text-decoration: none;
+    font-size: 30px;
+    display: block;
+    margin-bottom: 20px;
+    
+}
+
+.mc .name:hover{
+    text-decoration: underline;
+}
+
+
+.mc p{
+    line-height: 16px;
+    font-size: 14px;
+    margin-bottom: 25px;
+}
+
+.mc .price{
+    font-family: 'vetren', serif;
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+.mc .price span{
+    font-size: 36px;
+    color: #f6ff07;
+}
+
+.mc .price span em{
+    font-style: normal;
+    font-size: 24px;
+}
+
+
+.catalog-decorate.car .decor .thumber{
+    width: 310px;
+    height: 310px;
+
+}
+
+
+.catalog-decorate.car .info{
+    margin-left: 340px;
 }
 
 
