--- a/agentstvo/templates/base.html
+++ b/agentstvo/templates/base.html
@@ -24,7 +24,7 @@
         <div class="lp fll"><span>+7 (906)</span> 669-55-16</div>
         <a class="logo" href="/"><img src="{{ STATIC_URL }}images/logo.png" width="279" height="137" alt=""/></a>
 
-        <div class="rp flr">Вязьма, ул. Ленина, д. 56, офис 110</div>
+        <div class="rp flr">г.Вязьма, ул. Ленина, д. 56, офис 10</div>
         <div class="clr"></div>
 
         <div class="main-menu">
@@ -69,7 +69,7 @@
 
         <div class="contacts flr">
             <span><em>+7 (906) </em> 669- 55-16</span>
-            <p>Вязьма, ул. Ленина, д. 56, офис 110</p>
+            <p>г.Вязьма, ул. Ленина, д. 56, офис 10</p>
 
         </div>
         <div class="clr"></div>
