--- a/agentstvo/templates/base.html
+++ b/agentstvo/templates/base.html
@@ -14,7 +14,7 @@
     <link type="text/css" rel="stylesheet" media="all" href="{{ STATIC_URL }}css/bootstrap.css"/>
     <link type="text/css" rel="stylesheet" media="all" href="{{ STATIC_URL }}css/style.css"/>
     <link type="text/css" rel="stylesheet" media="all" href="{{ STATIC_URL }}css/fix.css"/>
-    <link href="{{ STATIC_URL }}favicon.png" rel="shortcut icon" type="image/x-icon" />
+    <link href="{{ STATIC_URL }}favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
 </head>
 <body>
