--- a/agentstvo/templates/services/artists.html
+++ b/agentstvo/templates/services/artists.html
@@ -23,6 +23,7 @@
 
                 <a class="order" href="#">Заказать</a>
             </div>
+        <div class="clr"></div>
         </div>
 
     {% endfor %}
