--- a/agentstvo/templates/html/formdefinition/forms/as_table.html
+++ b/agentstvo/templates/html/formdefinition/forms/as_table.html
@@ -1,4 +1,10 @@
 {% load friendly %}
+<h1>{{ form_definition.title }}</h1>
+{% if form_definition.body %}
+<div class="form-description">
+ {{ form_definition.body|safe }}
+</div>
+{% endif %}
 <form name="{{ form_definition.name }}" action="{{ form_definition.action }}" method="{{ form_definition.method }}" enctype="multipart/form-data">
     <table class="forms">
         <tbody>
