--- a/agentstvo/templates/services/cars.html
+++ b/agentstvo/templates/services/cars.html
@@ -23,7 +23,7 @@
 
                 <p>{{ cake.description }}</p>
 
-                <a class="order" href="#">Заказать</a>
+                <a class="order" href="/order/?service={{ cake.name|urlencode }}">Заказать</a>
 
 
             </div>
