--- a/agentstvo/templates/services/decorates.html
+++ b/agentstvo/templates/services/decorates.html
@@ -51,7 +51,7 @@
                 </div>
 
 
-                <a class="buy" href="#">Купить</a>
+                <a class="buy" href="/order/?service={{ decorate.name|urlencode }}">Купить</a>
             </div>
         </div>
     {% endfor %}
