--- a/agentstvo/templates/services/cars.html
+++ b/agentstvo/templates/services/cars.html
@@ -23,7 +23,7 @@
 
                 <p>{{ cake.description }}</p>
 
-                <a class="order" href="/order/?service={{ cake.name|urlencode }}">Заказать</a>
+                <a class="order" href="/order/?service=%D0%90%D0%B2%D1%82%D0%BE%D0%BC%D0%BE%D0%B1%D0%B8%D0%BB%D1%8C%20{{ cake.name|urlencode }}">Заказать</a>
 
 
             </div>
