--- a/agentstvo/templates/services/decorates.html
+++ b/agentstvo/templates/services/decorates.html
@@ -51,7 +51,7 @@
                 </div>
 
 
-                <a class="buy" href="/order/?service={{ decorate.name|urlencode }}">Купить</a>
+                <a class="buy" href="/order/?service=%D0%A3%D0%BA%D1%80%D0%B0%D1%88%D0%B5%D0%BD%D0%B8%D0%B5%20{{ decorate.name|urlencode }}">Купить</a>
             </div>
         </div>
     {% endfor %}
