--- a/agentstvo/templates/services/requisites.html
+++ b/agentstvo/templates/services/requisites.html
@@ -47,7 +47,7 @@
                 </div>
 
 
-                <a class="buy" href="/order/?service={{ decorate.name|urlencode }}">Купить</a>
+                <a class="buy" href="/order/?service=%D0%A1%D0%B2%D0%B0%D0%B4%D0%B5%D0%B1%D0%BD%D1%8B%D0%B9%20%D1%80%D0%B5%D0%BA%D0%B2%D0%B8%D0%B7%D0%B8%D1%82%20{{ decorate.name|urlencode }}">Купить</a>
             </div>
         </div>
     {% endfor %}
