--- a/agentstvo/templates/base.html
+++ b/agentstvo/templates/base.html
@@ -86,5 +86,17 @@
 <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.mousewheel.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/ilightbox.packed.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/main.js"></script>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-41385972-1', 'agentstvo67.ru');
+  ga('send', 'pageview');
+
+</script>
+
 </body>
 </html>
